Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
Description
I tried to stress-test ros copying after our latest improvement "write IOs defering"
I tested 0.4.9-dev-784-g2a7d167
VBox 4.3.40, 512MB RAM assigned to VM
Reproduction steps:
-I ran the installation of QT 4.8.6 and after maybe 33% installation progress
-I ran*in parallel* cmd and copied a file around 800MB from ISO9660 to C:\ FAT
I got an assertion:
*** Assertion failed: Vacb->Dirty
|
*** Source File: ../ntoskrnl/cc/view.c, line 557
|
full log: 0.4.9-dev-784-g2a7d167.log![]()
parallel-copy.png![]()
Attachments
Issue Links
- relates to
-
CORE-14585 Intermittent Cc "Assertion failed: Vacb->Dirty", on shutdown, on Test KVM
-
- Resolved
-