[NTOSKRNL] Unmark dirty first, and then write.

This will avoid trying to flush twice a dirty VACB under
high IOs pressure.

CORE-14584